...
          <View style={styles.content}>
            <View style={styles.issueTitle}>
              <Text style={styles.issueTitleText}>{issue.requestTitle}</Text>
              <StatusBadge status={status} />
            </View>

            <AdaptiveButton title = 'Open chat about this subject' 
            onPress = { () => navigation.navigate('Messaging')}
            icon = {<MessageSquare stroke="white" width={18} height={18} />}
            iconPosition= {'right'}
            ></AdaptiveButton>
            
            <Text style={styles.sectionTitle}>Images submitted</Text>
...
  imageCarouselContainer: {
    flexDirection: 'row',
    alignItems: 'center',
    justifyContent: 'center',
    marginBottom: 16,
  },
  arrowButton: {
    padding: 10,
  },
  arrowText: {
    fontSize: 24,
    fontWeight: 'bold',
    color: '#333',
...
