...
  EmailAuthProvider,
  verifyBeforeUpdateEmail,
} from 'firebase/auth';

export enum UserType {
  TENANT = 'Tenant',
  LANDLORD = 'Landlord',
  UNAUTHENTICATED = 'Unauthenticated',
}

// TODO add user data to firestore
export async function emailAndPasswordSignIn(
  email: string,
...
