...
        <TouchableOpacity onPress={onArchive} style={styles.archiveButton}>
          <Feather name="archive" size={24} color="#2C3E50" />
        </TouchableOpacity>
      )}

      <TouchableOpacity 
        testID='arrowButton'
        onPress={() => navigation.navigate('IssueDetails', { requestID: issue.requestID })}
        style={styles.arrowButton}>
        <Feather name="chevron-right" size={24} color="black" />
      </TouchableOpacity>
    </View>
  );
...

  return (
    <View style={styles.container}>
      <Header>
        <ScrollView style={styles.scrollView}>
          <View style={styles.titleContainer}>
            <Text style={styles.title}>Maintenance Requests</Text>
          </View>

          <View style={styles.switchContainer}>
            <Text> Archived Issues</Text>
            <Switch
              style={[{ marginLeft: 8 }, {marginRight: 8}, {marginBottom: 8}, {marginTop: 8}]}
...
