appId: "com.leazy.swent"
---
- launchApp:
    clearState: true

- tapOn:
    id: "emailInput"
- inputText: "test-e2e-landlord@test.com"

- tapOn:
    id: "passwordInput"
- inputText: "test-e2e-landlord"

- tapOn:
    id: "signInButton"